Bottom Navigation Changed, User icon shifted to top right

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">FutsalApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="futsal_label">Futsal</string>
+    <string name="community_label">Community</string>
+    <string name="booking_label">Booking</string>
 </resources>
