--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="futsal_label">Futsal</string>
     <string name="community_label">Community</string>
-    <string name="booking_label">Booking</string>
-    <string name="title_activity_insert_futsal">InsertFutsalActivity</string>
+    <string name="event_label">Event</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
