--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="futsal_label">Futsal</string>
     <string name="community_label">Community</string>
     <string name="event_label">Event</string>
+    <string name="user_label">Profile</string>
     <!-- Strings used for fragments for navigation -->
     <string name="next">Next</string>
     <string name="previous">Previous</string>
